--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,8 @@
     "xlocnum": "cpp",
     "xmemory": "cpp",
     "xstddef": "cpp",
-    "xtr1common": "cpp"
+    "xtr1common": "cpp",
+    "deque": "cpp",
+    "queue": "cpp"
   }
 }
